@@ -7,6 +7,7 @@
 - Changed model output file name extension from .pt to .pth.
 - Changed rootdir behaviour for tensorboard logging.
 - Implemented possibility of passing in function for extracting state_dict
+- Implemented possibility to only set some parts of the model to .train() or .eval()
 
 ## [0.1] - 2023-12-05
 - Code works for basic use. Tests implemented.
